--- a/src/CasinovaDevil6/Devil6/Devil6Game/Devil6Game.csproj
+++ b/src/CasinovaDevil6/Devil6/Devil6Game/Devil6Game.csproj
@@ -65,7 +65,6 @@
     <Reference Include="mscorlib" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
-
     <Reference Include="PerfEx.Infrastructure.Silverlight">
       <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Silverlight.dll</HintPath>
     </Reference>
@@ -79,6 +78,9 @@
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Devil6Page.xaml.cs">
+      <DependentUpon>Devil6Page.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPage6.xaml.cs">
       <DependentUpon>MainPage6.xaml</DependentUpon>
@@ -103,9 +105,9 @@
       <Generator>MSBuild:MarkupCompilePass1</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="MainPage.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="MainPage6.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
