--- a/src/CasinovaAll/Specs/TheS.Casinova.Colors.BackServices.Specs/TheS.Casinova.Colors.BackServices.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.Colors.BackServices.Specs/TheS.Casinova.Colors.BackServices.Specs.csproj
@@ -61,6 +61,21 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackServices\GetPlayerInfoToPayForColorsWinnerInfo.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetPlayerInfoToPayForColorsWinnerInfo.feature</DependentUpon>
+    </Compile>
+    <Compile Include="BackServices\GetRoundWinner.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetRoundWinner.feature</DependentUpon>
+    </Compile>
+    <Compile Include="BackServices\ListPlayerActionInfoToPayForColorsWinnerInfo.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ListPlayerActionInfoToPayForColorsWinnerInfo.feature</DependentUpon>
+    </Compile>
     <Compile Include="BackServices\PayForColorsWinnerInfo.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -69,6 +84,9 @@
     <Compile Include="BackServices\SpecEventDefinitions.cs" />
     <Compile Include="BackServices\Specs\ColorsGameStepsBase.cs" />
     <Compile Include="BackServices\Specs\CommonSteps.cs" />
+    <Compile Include="BackServices\Specs\GetPlayerInfoToPayForColorsWinnerInfoSteps.cs" />
+    <Compile Include="BackServices\Specs\GetRoundWinnerSteps.cs" />
+    <Compile Include="BackServices\Specs\ListPlayerActionInfoToPayForColorsWinnerInfoSteps.cs" />
     <Compile Include="BackServices\Specs\PayForColorsWinnerInfoSteps.cs" />
     <Compile Include="BackServices\Specs\UpdateOnGoingTrackingIDSteps.cs" />
     <Compile Include="BackServices\UpdateOnGoingTrackingID.feature.cs">
@@ -110,6 +128,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="BackServices\App.config" />
+    <None Include="BackServices\GetPlayerInfoToPayForColorsWinnerInfo.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetPlayerInfoToPayForColorsWinnerInfo.feature.cs</LastGenOutput>
+    </None>
+    <None Include="BackServices\GetRoundWinner.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetRoundWinner.feature.cs</LastGenOutput>
+    </None>
+    <None Include="BackServices\ListPlayerActionInfoToPayForColorsWinnerInfo.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>ListPlayerActionInfoToPayForColorsWinnerInfo.feature.cs</LastGenOutput>
+    </None>
     <None Include="BackServices\PayForColorsWinnerInfo.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>PayForColorsWinnerInfo.feature.cs</LastGenOutput>
